[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "efctl"
version = "0.1.0"
description = "Terminal monitor and control tool for EcoFlow power stations via Bluetooth LE"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
keywords = ["ecoflow", "ble", "bluetooth", "tui", "power-station"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.0.0; sys_platform == 'linux'",
    "ecdsa>=0.18.0",
    "pycryptodome>=3.19.0",
    "crc>=7.0.0",
    "protobuf>=4.25.0",
    "textual>=1.0.0",
]

[project.scripts]
efctl = "efctl.__main__:main"

[project.urls]
Repository = "https://github.com/user/efctl"
Issues = "https://github.com/user/efctl/issues"
